corpus/body_elements.txt
==========
Paragraphs
==========

Hello, I'm a reStructuredText file.

I'm another paragraph

-I'm not a list

---

(document
  (paragraph)
  (paragraph)
  (paragraph))

============
Bullet lists
============

- One
- Two

+ Another
* Other one

+ Just me

---

(document
  (bullet_list
    (list_item)
    (list_item))
  (bullet_list
    (list_item)
    (list_item))
  (bullet_list
    (list_item)))

================
Enumerated lists
================

1. One
2. Two
3. Three

#. One
#. Two

10. One
11. Two
I. Three
V. Four
a. Five
Z. Six

---

(document
  (enumerated_list
    (list_item)
    (list_item)
    (list_item))
  (enumerated_list
    (list_item)
    (list_item))
  (enumerated_list
    (list_item)
    (list_item)
    (list_item)
    (list_item)
    (list_item)
    (list_item)))

===========
Field lists
===========

:Date: 2001-08-16
:Version: 1
:Authors: Me
:Indentation: Since the field marker may be quite long, the second.
:Parameter i: integer

:something with Space: -Is this real?
:BASIC: YES

---

(document
  (field_list
    (field)
    (field)
    (field)
    (field)
    (field))
  (field_list
    (field)
    (field)))

============
Option lists
============

-a         Output all.
-c arg     Output just arg.
--long     Output all day long.

-p         This option has two paragraphs in the description.
--very-long-option  A VMS-style option.  Note the adjustment for the required two spaces.

-2, --two  This option has two variants.
-f FILE, --file=FILE  These two options are synonyms; both have arguments.

/V         A VMS/DOS-style option.

---

(document
  (option_list
    (option_list_item)
    (option_list_item)
    (option_list_item))
  (option_list
    (option_list_item)
    (option_list_item))
  (option_list
    (option_list_item)
    (option_list_item))
  (option_list
    (option_list_item)))

===========
Line blocks
===========

| I'm a line block

| Me too
| With two lines!

|

---

(document
  (line_block)
  (line_block)
  (line_block))


=========
Footnotes
=========

.. [1] Body elements go here.
.. [#] Body elements go here.
.. [#foo] Body elements go here.
.. [#another_label] Body elements go here.
.. [*] Body elements go here.

---

(document
  (footnote)
  (footnote)
  (footnote)
  (footnote)
  (footnote))

=========
Citations
=========

.. [CIT2002] This is the citation.  It's just like a footnote.
.. [foo-bar] This is the citation.  It's just like a footnote.
.. [foo_bar] This is the citation.  It's just like a footnote.
.. [foo.bar] This is the citation.  It's just like a footnote.

---

(document
  (citation)
  (citation)
  (citation)
  (citation))

=================
Hyperlink targets
=================

.. _hyperlink-name: link-block
.. _hyperlink_name: link-block

.. _hyperlink?name: link-block
.. _`_hyperlink: name`: link-block

.. _hyperlink-one:
.. _hyperlink-two:


---

(document
  (target)
  (target)
  (target)
  (target)
  (target)
  (target))

===========================
Anonymous hyperlink targets
===========================

__ foo
__ I'm anonymouse

__ Bar
__

---

(document
  (target)
  (target)
  (target)
  (target))

==========
Directives
==========

.. note::

.. image:: mylogo.jpeg

.. note:: This is a paragraph
.. warning:: Modify at your own risk!

---

(document
  (directive)
  (directive)
  (directive)
  (directive))

========================
Substitution definitions
========================

.. |reST| replace:: reStructuredText

.. |biohazard| image:: biohazard.png
.. |bio-hazard| image:: biohazard.png

.. |bio hazard| image:: biohazard.png
.. |bio|hazard| image:: biohazard.png

---

(document
  (substitution_definition)
  (substitution_definition)
  (substitution_definition)
  (substitution_definition)
  (substitution_definition))
