corpus/inline_markup.txt
========
Emphasis
========

Hello *world*. *Hello world*.
Something *in the middle* here.

I'm in the *mid*\dle.

I'm a *text*

*I'm* a text
*I'm not\* an emphasis.
*I'm*.*but not me*.

*Lonely*

---

(document
  (paragraph
    (emphasis)
    (emphasis)
    (emphasis))
  (paragraph
    (emphasis))
  (paragraph
    (emphasis))
  (paragraph
    (emphasis)
    (emphasis))
  (paragraph
    (emphasis)))

===============
Strong emphasis
===============

Hello **world**. **Hello world**.
Something **in the middle** here.

I'm a **text**

**I'm** a text
**I'm not\** a strong emphasis.

---

(document
  (paragraph
    (strong)
    (strong)
    (strong))
  (paragraph
    (strong))
  (paragraph
    (strong)))

================
Interpreted text
================

Hello `world`. `Hello world`.
Something `in the middle` here.

I'm a `text`

`I'm` a text
`I'm not\` an emphasis.

---

(document
  (paragraph
    (interpreted_text)
    (interpreted_text)
    (interpreted_text))
  (paragraph
    (interpreted_text))
  (paragraph
    (interpreted_text)))

===============
Inline literals
===============

Hello ``world``. ``Hello world``.
Something ``in the middle`` here.

I'm a ``text``

``I'm`` a text
``I'm an valid\`` emphasis.

---

(document
 (paragraph
  (literal)
  (literal)
  (literal))
 (paragraph
  (literal))
 (paragraph
  (literal)
  (literal)))

=======================
Substitution references
=======================

Hello |world|. |Hello world|.
Something |in the middle| here.

I'm a |text|

|I'm| a text
|I'm not\| an reference.

---

(document
 (paragraph
  (substitution_reference)
  (substitution_reference)
  (substitution_reference))
 (paragraph
  (substitution_reference))
 (paragraph
  (substitution_reference)))

=======================
Inline internal targets
=======================

Hello _`world`. _`Hello world`.
Something _`in the middle` here.

I'm a _`text`

_`I'm` a text
_`I'm not\` a target.

---

(document
  (paragraph
    (target)
    (target)
    (target))
  (paragraph
    (target))
  (paragraph
    (target)))

===================
Footnote references
===================

Please read the manual [1]_.
It was on monday [#monday]_, and tuesday [#]_.

I'm a [1]_

[1]_ a text
[1\] a footnote.

---

(document
  (paragraph
    (footnote_reference)
    (footnote_reference)
    (footnote_reference))
  (paragraph
    (footnote_reference))
  (paragraph
    (footnote_reference)))

====================
Hyperlink references
====================

Please read the manual_.
See our new_book_.
It was `on monday`_, and `tuesday`_.

I'm a text_
I'm a text__

`I'm`__ a text
`I'm not\`_ a reference.

---

(document
  (paragraph
    (reference)
    (reference)
    (reference)
    (reference))
  (paragraph
    (reference)
    (reference))
  (paragraph
    (reference)))
