corpus/sections.txt
======================
Sections with overline
======================

~~~~
Four
~~~~

--
A
--

^^^^^^^^^^
 Subtitle
^^^^^^^^^^

~~~~~
*Foo*
~~~~~

+++
Foo **bar**
+++

---

(document
 (section
  (title))
 (section
  (title))
 (section
  (title))
 (section
  (title
   (emphasis)))
 (section
  (title
   (strong))))


=========================
Invalid overline sections
=========================

++
Short
+++

///
Short
//


!!!
Different
^^^

---

(document
  (paragraph)
  (paragraph)
  (paragraph))
