test/corpus/partial_fixes.txt
================================================================================
Bullet items containing colons (#16, #20)
================================================================================

  * a for example has colon here :
  * b : but earlier

--------------------------------------------------------------------------------

(document
  (block_quote
    (bullet_list
      (list_item
        (body (paragraph)))
      (list_item
        (body
          (paragraph
            (ERROR)))))))

================================================================================
Indented bullet items with colons (#20)
================================================================================

Bullet list:
    * stuff : other
    * stuff : other

--------------------------------------------------------------------------------

(document
  (definition_list
    (list_item
      (term)
      (definition
        (bullet_list
          (list_item
            (body
              (paragraph
                (ERROR))))
          (list_item
            (body
              (paragraph
                (ERROR)))))))))

================================================================================
Footnote with colon in body (#45)
================================================================================

.. [1] Footnote from : this journal

--------------------------------------------------------------------------------

(document
  (footnote
    name: (label)
    body: (body
      (paragraph
        (ERROR)))))

================================================================================
Incomplete definition list between sections (#48)
================================================================================

See Also
--------
item : description

Notes
-----
Some text.

--------------------------------------------------------------------------------

(document
  (section
    (title))
  (paragraph
    (ERROR))
  (section
    (title))
  (paragraph))

================================================================================
Standalone :: after a paragraph line is not a section underline (#27)
================================================================================

Notes
-----
When using ``distutils``, for example in ``setup.py``
::

  import numpy as np

--------------------------------------------------------------------------------

(document
  (section
    (title))
  (paragraph
    (literal)
    (literal)
    (ERROR)))

================================================================================
Embedded URI: unclosed angle bracket falls back to plain reference
================================================================================

`text <unclosed`_

--------------------------------------------------------------------------------

(document
  (paragraph
    (reference
      (name))))

================================================================================
Embedded URI: missing closing bracket consumes URI as part of name
================================================================================

See `Python <http://www.python.org`_ here.

--------------------------------------------------------------------------------

(document
  (paragraph
    (reference
      (name))))

================================================================================
Embedded URI: newline inside URI prevents URI parse
================================================================================

`text <http://example.com
>`_

--------------------------------------------------------------------------------

(document
  (paragraph
    (reference
      (name))))

================================================================================
Stray grid border line in body context falls back to text (no crash)
================================================================================

Before.

+-----+-----+

After.

--------------------------------------------------------------------------------

(document
  (paragraph)
  (paragraph)
  (paragraph))

================================================================================
Stray '+' run line without closing border falls back to text
================================================================================

Before.

+----

After.

--------------------------------------------------------------------------------

(document
  (paragraph)
  (paragraph)
  (paragraph))

================================================================================
Single grid border inside a list item falls back to text (no crash)
================================================================================

- item:

  +---+---+

- next

--------------------------------------------------------------------------------

(document
  (bullet_list
    (list_item
      (body
        (paragraph)
        (paragraph)))
    (list_item
      (body
        (paragraph)))))

================================================================================
Table-like '=' line in body context loses inline markup (known limitation)
================================================================================

- item:

  === text *emph* ===

- next

--------------------------------------------------------------------------------

(document
  (bullet_list
    (list_item
      (body
        (paragraph)
        (paragraph))))
  (bullet_list
    (list_item
      (body
        (paragraph)))))

================================================================================
Directive with options followed by bullet list
================================================================================

.. note::
     :k: v

* a

--------------------------------------------------------------------------------

(document
  (directive
    name: (type)
    body: (body
      (options
        (field
          (field_name)
          (field_body
            (paragraph))))))
  (bullet_list
    (list_item
      (body
        (paragraph)))))
